# qt-process-minimizer

./: .gitignore  CMakeLists.txt  README.md  appicon.rc  hotkeyeventfilter.cpp  hotkeyeventfilter.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  minimizer.pro  processpickerdialog.cpp  processpickerdialog.h  processpickerdialog.ui  resources.qrc  utils.cpp  utils.h  win32utils.h
.github/workflows/: build.yaml
tests/: tst_keymapping.cpp
